# bare-metal-experiments

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: arduino_uno_smd_r2.md  esp32_ttgo_tdisplay.md
